<resources>
    <string name="app_name">STAR WARS</string>

    <!-- tabs name-->
    <string name="tab_people">People</string>
    <string name="tab_planets">Planets</string>
    <string name="tab_starships">Starships</string>

    <!-- comments -->
    <string name="placeholder_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="comments">Comments: </string>

    <!-- columns people -->
    <string name="gender">Gender: </string>
    <string name="height">Height: </string>
    <string name="mass">Mass: </string>
    <string name="hair_color">Hair Color: </string>
    <string name="skin_color">Skin Color: </string>
    <string name="eye_color">Eye Color: </string>
    <string name="birth_year">Birth Year: </string>


    <!-- columns planets -->
    <string name="rotation_period">Rotation Period: </string>
    <string name="orbital_period">Orbital Period: </string>
    <string name="diameter">Diameter: </string>
    <string name="climate">Climate: </string>
    <string name="gravity">Gravity: </string>
    <string name="terrain">Terrain: </string>
    <string name="surface_water">Surface Water: </string>
    <string name="population">Population: </string>

    <!-- columns starships -->
    <string name="model">Model: </string>
    <string name="starship_class">Starship Class: </string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="cost_in_credits">Cost In Credits: </string>
    <string name="length">Length: </string>
    <string name="max_atmosphering_speed">Max ATM Speed: </string>
    <string name="crew">Crew: </string>
    <string name="passengers">Passengers: </string>
    <string name="cargo_capacity">Cargo Capacity: </string>
    <string name="consumables">Consumables: </string>
    <string name="hyperdrive_rating">Hyperdrive Rating: </string>
    <string name="mglt">MGLT: </string>
</resources>
