<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <TableLayout
                android:id="@+id/tabDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/model" />

                    <TextView
                        android:id="@+id/txtModel"
                        android:layout_span="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblManufacturer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/manufacturer" />

                    <TextView
                        android:id="@+id/txtManufacturer"
                        android:layout_span="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/lblStarshipClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starship_class"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtStarshipClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_span="3"/>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblMaxAtmospheringSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_atmosphering_speed"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtMaxAtmospheringSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_span="3"/>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblHyperdriveRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hyperdrive_rating"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtHyperdriveRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                    <TextView
                        android:id="@+id/lblCrew"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crew"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtCrew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblConsumables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consumables"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtConsumables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                    <TextView
                        android:id="@+id/lblPassengers"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passengers"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtPassengers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCostInCredits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_in_credits"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtCostInCredits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                    <TextView
                        android:id="@+id/lblLength"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCargoCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargo_capacity"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtCargoCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                    <TextView
                        android:id="@+id/lblMglt"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mglt"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtMglt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp" />

                </TableRow>



                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/lblComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comments"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:layout_span="2"
                        android:id="@+id/editComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/placeholder_comment"
                        />

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorWhite"/>
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/imgFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_star_border" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>